# passport-unlocker-linux

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  hardware-compatibility.yml
.github/workflows/: ci.yml
data/: io.github.kugaichen.PassportUnlocker.desktop  io.github.kugaichen.PassportUnlocker.metainfo.xml  io.github.kugaichen.PassportUnlocker.policy
data/autostart/: io.github.kugaichen.PassportUnlocker.Monitor.desktop
debian/: changelog  copyright  passport-unlocker.install  passport-unlocker.links  rules
debian/source/: format
debian/tests/: control  smoke
docs/: COMPATIBILITY.md  DEVELOPMENT_SPEC.md  DEVELOPMENT_SPEC_FULL.md  HARDWARE_TEST_PLAN.md  OPEN_SOURCE_READINESS.md  PROTOCOL_NOTES.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  SG_IO_CLEAN_ROOM.md  UPSTREAM_ANALYSIS.md  VALIDATION.md
docs/man/: passport-unlocker-gui.1  passport-unlocker-helper.8  passport-unlocker.1
legacy/: wdpassport_utils_upstream.py
packaging/debian/: changelog  control  passport-unlocker.install  passport-unlocker.links
packaging/debian/tests/: smoke
scripts/: build-deb.sh  wsl-gui-smoke.sh  wsl-installed-smoke.sh  wsl-test-phase1.sh  wsl-test-phase2.sh
src/passport_unlocker/: __init__.py  __main__.py
src/passport_unlocker/cli/: __init__.py  main.py
src/passport_unlocker/core/: __init__.py  constants.py  errors.py  linux_sg_io.py  models.py  password.py  protocol.py  transport.py
src/passport_unlocker/devices/: __init__.py  discovery.py  identity.py  monitor.py  rescan.py
tests/unit/: test_identity.py  test_password.py  test_protocol.py  test_sg_allowlist.py  test_wire.py
(+8 files in other folders)
