[metadata]
name = passport-unlocker
version = 0.1.0
description = Unofficial Linux unlocker for compatible WD My Passport drives
long_description = file: README.md
long_description_content_type = text/markdown
author = Passport Unlocker contributors
author_email = kugaichen@users.noreply.github.com
url = https://github.com/kugaichen/passport-unlocker-linux
project_urls =
    Issues = https://github.com/kugaichen/passport-unlocker-linux/issues
    Documentation = https://github.com/kugaichen/passport-unlocker-linux/tree/main/docs
license = GPL-2.0-only
license_files =
    LICENSE
    NOTICE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pyudev>=0.22

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    passport-unlocker = passport_unlocker.cli.main:main
    passport-unlocker-gui = passport_unlocker.gui.application:main
    passport-unlocker-helper = passport_unlocker.helper.main:main

[options.extras_require]
dev =
    pytest>=8
    ruff>=0.5
    mypy>=1.10
    build>=1.2
